<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/ticket_name"
            android:textColor="@color/color9"
            android:textSize="26px" />

        <TextView
            android:id="@+id/tv_cancle_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/color9"
            android:textSize="26px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/cancle_way"
            android:textColor="@color/color9"
            android:textSize="26px" />

        <TextView
            android:id="@+id/tv_cancle_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/color9"
            android:textSize="26px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/cancle_time"
            android:textColor="@color/color9"
            android:textSize="26px" />

        <TextView
            android:id="@+id/tv_cancle_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/color9"
            android:textSize="26px" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_count_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/cancle_count"
            android:textColor="@color/color9"
            android:textSize="26px" />

        <TextView
            android:id="@+id/tv_cancle_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tv_count_three"
            android:textColor="@color/color9"
            android:textSize="26px" />

        <Button
            android:id="@+id/btn_reprinter"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/tv_style_three"
            android:gravity="center"
            android:text="@string/reprint_ticket"
            android:textColor="@color/color3"
            android:textSize="24px" />
    </RelativeLayout>
</LinearLayout>
