<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color5"
    android:orientation="vertical"
    tools:context=".helper.activity.AttcrtActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color5"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/Ima_att"
            android:layout_width="32px"
            android:layout_height="44px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@mipmap/prosale_back"
            android:onClick="onClick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/name_attcrt"
            android:textColor="@color/color2"
            android:textSize="36px" />

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_reset_style"
            android:onClick="onClick"
            android:text="@string/refresh" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color7" />

    <LinearLayout
        android:id="@+id/att_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/travel_name"
            android:textColor="@color/color2"
            android:textSize="36px" />

        <ListView
            android:id="@+id/attract_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:divider="@drawable/divider"
            android:scrollbars="none" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/att_linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="66dp"
            android:layout_height="86dp"
            android:background="@mipmap/fy_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/null_of_group" />
    </LinearLayout>
</LinearLayout>
